--- a/Zootastic/Base.lproj/Main.storyboard
+++ b/Zootastic/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gqx-kG-Qpw">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gqx-kG-Qpw">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="vup-FE-Vq5" detailTextLabel="prC-y9-sUN" style="IBUITableViewCellStyleSubtitle" id="2qf-4S-KBL">
@@ -50,16 +50,40 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="gqx-kG-Qpw" secondAttribute="width" id="EZV-Rs-Obd"/>
-                            <constraint firstItem="gqx-kG-Qpw" firstAttribute="top" secondItem="XBP-CK-7YJ" secondAttribute="bottom" id="bTh-3H-OXG"/>
+                            <constraint firstItem="gqx-kG-Qpw" firstAttribute="top" secondItem="XBP-CK-7YJ" secondAttribute="bottom" constant="-64" id="bTh-3H-OXG"/>
                             <constraint firstAttribute="centerX" secondItem="gqx-kG-Qpw" secondAttribute="centerX" id="lvb-nz-m50"/>
-                            <constraint firstAttribute="height" secondItem="gqx-kG-Qpw" secondAttribute="height" constant="20" id="x9G-7g-bbA"/>
+                            <constraint firstAttribute="height" secondItem="gqx-kG-Qpw" secondAttribute="height" id="x9G-7g-bbA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="bZQ-kz-SGF"/>
+                    <navigationItem key="navigationItem" id="bZQ-kz-SGF">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3fV-Gm-mle">
+                            <connections>
+                                <segue destination="0cb-cJ-xaN" kind="show" id="vO2-iG-eou"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cPk-ka-2Zu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1109" y="340"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="otF-9x-wco">
+            <objects>
+                <viewController id="0cb-cJ-xaN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tFi-U9-b2J"/>
+                        <viewControllerLayoutGuide type="bottom" id="pCn-Bi-n1B"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="i3D-y0-jtg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LDS-bg-IdN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1799" y="340"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9pS-SH-YLc">
